--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "ag-grid-react": "^31.3.2",
+    "image-conversion": "^2.1.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "primeicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
