--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jspdf-autotable": "^3.8.2",
     "primeicons": "^7.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
